--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,2 @@
-
-    <p>&copy; 2024 Tienda OnLine. Todos los derechos reservados.</p>
-
+<p>&copy; 2024 Tienda OnLine. Todos los derechos reservados.</p>
+<p>Italia 545 - MZA</p>
